--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,11 @@ authors = ["Veera0742 <veera.lumioksa@gmail.com>"]
 python = "^3.8"
 cowsay = "^4.0"
 invoke = "^1.6.0"
+python-dotenv = "^0.19.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
+pytest-dotenv = "^0.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
