--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^0.19.2"
 pytest = "^6.2.5"
 pytest-dotenv = "^0.5.2"
 pylint = "^2.12.1"
+coverage = "^6.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
